# TrustLens

./: .env.example  .gitignore  README.md  TODO.md  project.md
backend/: README.md  alembic.ini  conftest.py  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20260428_2302_e35c3942a989_initial_schema.py  20260428_2346_4187424ae0cf_phase3_scan_type_column.py  20260429_0204_9747c3fbc1c5_add_community_reports_and_refill_.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph.py  parsers.py  prompts.py  state.py
backend/app/api/: __init__.py  deps.py  routes_ai_chat.py  routes_codes.py  routes_health.py  routes_images.py  routes_meta_wa.py  routes_whatsapp.py  testing.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  i18n.py  i18n_ai.py  logging.py  rephraser.py
backend/app/db/: __init__.py  base.py
backend/app/i18n/: en.json  hi.json  ta.json
backend/app/models/: __init__.py  certification.py  community_report.py  enums.py  grocery.py  health_profile.py  medicine.py  message.py  prescription.py  refill_reminder.py  scan_event.py  user.py
backend/app/schemas/: __init__.py  common.py  community_report.py  grocery.py  health_profile.py  medicine.py  pipeline.py  (+6 more)
backend/tests/: test_barcode_decoder.py  test_classifier.py  test_grocery_claims.py  test_grocery_dates.py  test_grocery_fssai.py  test_grocery_ingredients.py  test_grocery_nutrition.py  test_grocery_real_world.py  test_health.py  test_matcher_compare.py  test_ocr_extractor.py  test_routes_images_smoke.py
(+132 files in other folders)
