# Project metadata + tool configs. Dependencies are mirrored in requirements.txt
# for `pip`-only environments; this file is the source of truth for tools like
# ruff and pytest.

[project]
name = "trustlens-backend"
version = "0.1.0"
description = "FastAPI HTTP layer for TrustLens"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
